# FlagGems

./: .coveragerc  .gitignore  CMakeLists.txt  MAINTAINERS.md  mkdocs.yml  pyproject.toml  setup.sh
.github/workflows/: backend-test.yaml  command.yaml  coverage.yaml  cpp-op-test.yaml  daily.yaml  hugo-site.yaml  linter.yml  random-test.yaml  release.yaml  triage.yaml  unittest.yaml
benchmark/: base.py  conftest.py  core_shapes.yaml  core_shapes.yaml.1a  core_shapes.yaml.1b  core_shapes.yaml.1c  core_shapes.yaml.1d  core_shapes.yaml.2a  core_shapes.yaml.3a  core_shapes.yaml.3c  core_shapes.yaml.3c.quick  core_shapes.yaml.3d  core_shapes.yaml.4  perf.sh  test_act_quant.py  test_amax.py  test_any.py  test_as_strided_copy.py  test_avg_pool2d.py  test_avg_pool3d_perf.py  test_bitwise_not.py  test_bitwise_or.py  test_blas_perf_parallel.py  test_cauchy.py  test_celu.py  test_concat_and_cache_mla.py  test_conv_transpose2d.py  test_copy.py  test_cp_gather_indexer_k_quant_cache.py  test_deepseek_v4_attention_combine_topk_swa_indices.py  test_deepseek_v4_attention_compute_global_topk_indices_and_lens.py  test_deepseek_v4_attention_dequantize_and_gather_k_cache.py  test_deepseek_v4_attention_fused_q_kv_rmsnorm.py  test_dgeglu.py  test_dswiglu.py  test_euclidean_dist.py  test_flash_attn_varlen_func.py  test_flash_attn_varlen_opt_init_func.py  test_flash_mla.py  test_flash_mla_sparse_fwd.py  (+42 more)
benchmark/test_FLA/: test_chunk_gated_delta_rule_perf.py  test_fused_recurrent_gated_delta_rule_perf.py
cmake/: BackendGCU.cmake  BackendNPU.cmake
conf/: operators.yaml
container/: containerfile
ctests/: CMakeLists.txt  test_triton_add.cpp  test_triton_addmm.cpp  test_triton_argmax.cpp  test_triton_bmm.cpp  test_triton_cat.cpp  test_triton_contiguous.cpp  test_triton_copy.cpp  test_triton_div.cpp  test_triton_exponential_.cpp  test_triton_fill.cpp  test_triton_flash_attn_varlen.cpp  test_triton_norm.cpp  test_triton_pointwise.cpp  test_triton_reduction.cpp  test_triton_reshape_and_cache_flash.cpp  test_triton_rope.cpp  test_triton_rwkv_ka_fusion.cpp  test_triton_rwkv_mm_sparsity.cpp  test_triton_softmax.cpp  test_triton_sort.cpp  test_triton_tensor_constructor.cpp  test_triton_topk.cpp
docs/: hugo.yaml
docs/assets/: _custom.scss
experimental_tests/performance/: _adaptive_avg_pool3d_test.py  _log_softmax_backward_data_test.py  _unsafe_view_test.py  abs__test.py  abs_test.py  absolute__test.py  addcdiv_test.py  addcmul__test.py  amin_test.py  arccosh_test.py  arctanh_test.py  atanh__test.py  celu__test.py  celu_test.py  copy__test.py  cos__test.py  cosh__test.py  deg2rad__test.py  deg2rad_test.py  diag_test.py  elu_test.py  erf__test.py  erfinv__test.py  erfinv_test.py  exp2__test.py  exp2_test.py  exp__test.py  expand_test.py  eye_test.py  fix__test.py  (+72 more)
lib/: CMakeLists.txt  add.cpp  addmm.cpp  argmax.cpp  bmm.cpp  cat.cpp  contiguous.cpp  device_info.cpp  div.cpp  embedding.cpp  fill.cpp  fused_add_rms_norm.cpp  max.cpp  mm.cpp  nonzero.cpp  reshape_and_cache_flash.cpp  rms_norm.cpp  rotary_embedding.cpp  rwkv_ka_fusion.cpp  rwkv_mm_sparsity.cpp  softmax.cpp  sort.cpp  sum.cpp  topk.cpp  zeros.cpp
lib/pointwise_dynamic_cpp/: CMakeLists.txt
modules_tests/: test_gems_attn.py
requirements/: requirements_aipu.txt  requirements_ascend.txt  requirements_enflame.txt  requirements_hcu.txt  requirements_iluvatar.txt  requirements_metax.txt  requirements_mthreads.txt  requirements_nvidia.txt  requirements_sunrise.txt  requirements_tsingmicro.txt  requirements_xpu.txt
src/flag_gems/csrc/: CMakeLists.txt  aten_patch.cpp  cstub.cpp
tests/: accuracy_utils.py  conftest.py  ks_tests.py  test.sh  test_abs.py  test_addcdiv.py  test_addcmul.py  test_addmv.py  test_addr.py  test_allclose.py  test_amax.py  test_aminmax.py  test_angle.py  test_any.py  test_apply_rotary_pos_emb.py  test_arange_start.py  test_argmax.py  test_argmin.py  test_as_strided_copy.py  test_asinh.py  test_assert_async.py  test_avg_pool2d.py  test_avg_pool3d.py  test_baddbmm.py  test_batch_norm.py  test_bernoulli.py  test_cat.py  test_cauchy.py  test_clip.py  test_conj_physical.py  test_contiguous.py  test_conv1d.py  test_conv2d.py  test_conv3d.py  test_conv_transpose1d.py  test_conv_transpose2d.py  test_count_nonzero.py  test_cp_gather_indexer_k_quant_cache.py  test_cross_entropy_loss.py  test_cudnn_convolution.py  (+132 more)
tools/: extract_aten_ops  get_marks.py  gpu_check_mthreads.sh  gpu_check_nvidia.sh  psum_text  psum_web  psummary  run_tests.py  set-env.sh  setup_vendor.sh  test-examples.sh  test-op-experimental.sh
(+785 files in other folders)
